syntax = "proto3";

package domain;
option go_package = "marketplace-services/pkg/domain";

message DeclinedNegotiationRequestEvent {
    uint64 id = 1;
}