syntax = "proto3";

package domain;
option go_package = "marketplace-services/pkg/domain";

message RequestedNegotiationEvent {
    uint64 id = 1;
    string requester = 2;
    uint64 product = 3;
}